# picoscope

./: .gitignore  17_11_1.rar  17_11_2.rar  17_11_3.rar  2  23_11.rar  23_11_1.rar  29_11.rar  CMakeLists.txt  LICENSE  Plot_data.m  README.md  adf.c  file.rar  file.xml  logger.cpp  logger.hpp  main  main.cpp  main.cpp.00  noise_channel.txt  noise_measure.csv  noise_measure.txt  parser.cpp  parser.hpp  pico_test_00_second_copy.cbp  pico_test_00_second_copy.cscope_file_list  pico_test_00_second_copy.depend  pico_test_00_second_copy.layout  picofunctions.cpp  picofunctions.h  picoscope4000a.h  plot_data.py  ps4000a.def  ps4000a.lib  run.sh  simplelogger.cpp  simplelogger.hpp  test.txt  test_8_channel.txt  (+2 more)
.github/workflows/: build.yaml
inc/: HRDL.h  PicoCallback.h  PicoConnectProbes.h  PicoDeviceDefinitionsExperimental.h  PicoDeviceEnums.h  PicoDeviceStructs.h  PicoStatus.h  PicoVersion.h  pl1000Api.h  plcm3Api.h  ps2000.h  ps2000aApi.h  ps3000.h  ps3000aApi.h  ps4000Api.h  ps4000aApi.h  ps5000Api.h  ps5000aApi.h  ps6000Api.h  ps6000aApi.h  ps6000aApiExperimental.h  usbDrDaqApi.h  usbPT104Api.h  usbtc08.h
libps4000a/: ps4000aApi.h
output/: data_2025-01-17_20-04-28.csv
src/: logger.cpp  logger.hpp  main.cpp  picofunctions.cpp  picofunctions.h  picoscope.code-workspace
